# STM8S105K4_BSP

./: .gitignore  CMakeLists.txt  stm8s_black.code-workspace
src/: main.c  stm8s105k4_bsp.c
src/hal/: hal_led.h  hal_stdlib.h  hal_uart.h
src/hal/stm8s105/: led.c  qbuffer.c  stdlib.c  uart.c
src/inc/: qbuffer.h  stm8s105k4.h  stm8s105k4_bsp.h
tools/: stm8flash  toolchain.cmake
